--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script src="https://take-out.momotarosushi.ca/chatbot-assets/lex-web-ui-loader.js"></script>
+
   </body>
 </html>
