called the wrong api

--- a/chatbot-assets/index.html
+++ b/chatbot-assets/index.html
@@ -24,7 +24,7 @@
       replace the webpack tag with:
       <link href="lex-web-ui-loader.min.css" rel="stylesheet">
     -->
-    <link href="lex-web-ui-loader.css" rel="stylesheet">
+    <link href="/chatbot-assets/lex-web-ui-loader.css" rel="stylesheet">
 
     <link rel="stylesheet" href="./custom-chatbot-style.css">
   </head>
@@ -38,7 +38,7 @@
       replace the webpack tag with:
       <script src="./lex-web-ui-loader.min.js"></script>
     -->
-    <script src="lex-web-ui-loader.js"></script>
+    <script src="/chatbot-assets/lex-web-ui-loader.js"></script>
 
     <!--
       The following script instantiate the full page loader and
