--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Restaurant Online Ordering Platform</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-    <script src="https://take-out.momotarosushi.ca/chatbot-assets/lex-web-ui-loader.js"></script>
-
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Restaurant Online Ordering Platform</title>
+  
+  <link href="https://take-out.momotarosushi.ca/chatbot-assets/lex-web-ui-loader.css" rel="stylesheet">
+</head>
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+  
+  <script src="https://take-out.momotarosushi.ca/chatbot-assets/lex-web-ui-loader.js"></script>
+</body>
 </html>
