added json file for lex

--- a/chatbot-assets/chatbot.html
+++ b/chatbot-assets/chatbot.html
@@ -16,13 +16,11 @@
     <title>LexWebUi</title>
     <link href="data:image/x-icon;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQEAYAAABPYyMiAAAABmJLR0T///////8JWPfcAAAACXBIWXMAAABIAAAASABGyWs+AAAAF0lEQVRIx2NgGAWjYBSMglEwCkbBSAcACBAAAeaR9cIAAAAASUVORK5CYII=" rel="icon" type="image/x-icon" />
 
-    <link href="./lex-web-ui-loader.css" rel="stylesheet">
-
-    <link rel="stylesheet" href="./custom-chatbot-style.css">
+    <link href="/chatbot-assets/lex-web-ui-loader.css" rel="stylesheet">
+    <link rel="stylesheet" href="/chatbot-assets/custom-chatbot-style.css">
   </head>
   <body>
-    <script src="./lex-web-ui-loader.js"></script>
-
-    <script src="./initiate-loader.js"></script>
+    <script src="/chatbot-assets/lex-web-ui-loader.js"></script>
+    <script src="/chatbot-assets/initiate-loader.js"></script>
   </body>
 </html>
