--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Restaurant Online Ordering Platform</title>
-
-    <link href="/chatbot-assets/lex-web-ui-loader.css" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
     
+    <!-- Load chatbot assets from nginx-proxy -->
+    <link href="/chatbot-assets/lex-web-ui-loader.css" rel="stylesheet">
     <script src="/chatbot-assets/lex-web-ui-loader.js"></script>
   </body>
 </html>
