--- a/chatbot-assets/chatbot.html
+++ b/chatbot-assets/chatbot.html
@@ -8,7 +8,7 @@
         img-src * data:;
         frame-src *;
         script-src 'self' 'unsafe-eval';
-        style-src 'self' 'unsafe-inline';
+        style-src 'self' 'unsafe-inline' fonts.googleapis.com;
         connect-src 'self' wss://*.amazonaws.com  *.amazonaws.com *.amazoncognito.com;
         font-src 'self' fonts.gstatic.com; 
         upgrade-in-secure-requests;">
@@ -17,9 +17,25 @@
     <link href="data:image/x-icon;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQEAYAAABPYyMiAAAABmJLR0T///////8JWPfcAAAACXBIWXMAAABIAAAASABGyWs+AAAAF0lEQVRIx2NgGAWjYBSMglEwCkbBSAcACBAAAeaR9cIAAAAASUVORK5CYII=" rel="icon" type="image/x-icon" />
 
     <link href="/chatbot-assets/lex-web-ui-loader.css" rel="stylesheet">
-    <link rel="stylesheet" href="/chatbot-assets/custom-chatbot-style.css">
+    <link rel="stylesheet" href="/chatbot-assets/material_icons.css">
+    <link rel="stylesheet" href="/chatbot-assets/3.8.3_dist_vuetify.min.css">
+    <link href="/chatbot-assets/lex-web-ui.min.css" rel="stylesheet">
+    <link href="/chatbot-assets/custom-chatbot-style.css" rel="stylesheet">
   </head>
   <body>
+    <div id="lex-web-ui-fullpage"></div>
+
+    <!-- Dependencies -->
+    <script src="/chatbot-assets/3.5.13_dist_vue.global.prod.js"></script>
+    <script src="/chatbot-assets/3.8.3_dist_vuetify.min.js"></script>
+    <script src="/chatbot-assets/4.1.0_dist_vuex.min.js"></script>
+    <script src="/chatbot-assets/aws-sdk-2.903.0.min.js"></script>
+    <script src="/chatbot-assets/lex-web-ui.min.js"></script>
     <script src="/chatbot-assets/lex-web-ui-loader.js"></script>
+    <!-- 
+      REMOVED: This script loads a default config and conflicts 
+      with the config passed from App.tsx 
+    -->
+    <!-- <script src="/chatbot-assets/initiate-loader.js"></script> -->
   </body>
 </html>
