--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Restaurant Online Ordering Platform</title>
     
     <!-- Load chatbot CSS first -->
-    <link href="/chatbot-assets/lex-web-ui-loader.css" rel="stylesheet">
+    <link href="/dist/lex-web-ui-loader.css" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
@@ -18,6 +18,6 @@
     <script type="module" src="/src/main.tsx"></script>
     
     <!-- Load chatbot JS after the DOM -->
-    <script src="/chatbot-assets/lex-web-ui-loader.js"></script>
+    <script src="/dist/lex-web-ui-loader.js"></script>
   </body>
 </html>
