changed assets location

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <script>
       window.lexWebUiLoaderConfig = {
         iframe: {
-          iframeSrcPath: "https://d238pk92pz45o2.cloudfront.net/parent.html"
+          iframeSrcPath: "https://d2ibqiw1xziqq9.cloudfront.net/parent.html"
         }
       };
     </script>
     
-    <script src="https://d238pk92pz45o2.cloudfront.net/lex-web-ui-loader.js"></script>
+    <script src="https://d2ibqiw1xziqq9.cloudfront.net/lex-web-ui-loader.js"></script>
   </body>
 </html>
