--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Restaurant Online Ordering Platform</title>
     
-    <link href="https://d238pk92pz45o2.cloudfront.net/lex-web-ui-loader.css" rel="stylesheet">
+    <link href="https://d2ibqiw1xziqq9.cloudfront.net/lex-web-ui-loader.css" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
